--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -100,14 +100,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing streamlit_app.py\n"
+      "Overwriting streamlit_app.py\n"
      ]
     }
    ],
@@ -127,13 +127,17 @@
     "    data = pd.read_csv(uploaded_file)\n",
     "    st.write(\"Превью данных:\")\n",
     "    st.dataframe(data)\n",
+    "\n",
+    "    options = data.city.unique()\n",
+    "    selected_option = st.selectbox(\"Выберите опцию:\", options)\n",
+    "\n",
     "else:\n",
     "    st.write(\"Пожалуйста, загрузите CSV-файл.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "id": "SsrwTMhRj6dK"
    },
@@ -187,80 +191,6 @@
     "# Генерация данных\n",
     "data = generate_realistic_temperature_data(list(seasonal_temperatures.keys()))\n",
     "data.to_csv('temperature_data.csv', index=False)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>city</th>\n",
-       "      <th>timestamp</th>\n",
-       "      <th>temperature</th>\n",
-       "      <th>season</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>New York</td>\n",
-       "      <td>2010-01-01</td>\n",
-       "      <td>0.790146</td>\n",
-       "      <td>winter</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>New York</td>\n",
-       "      <td>2010-01-02</td>\n",
-       "      <td>2.333070</td>\n",
-       "      <td>winter</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>New York</td>\n",
-       "      <td>2010-01-03</td>\n",
-       "      <td>-1.279703</td>\n",
-       "      <td>winter</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       city  timestamp  temperature  season\n",
-       "0  New York 2010-01-01     0.790146  winter\n",
-       "1  New York 2010-01-02     2.333070  winter\n",
-       "2  New York 2010-01-03    -1.279703  winter"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.head(3)"
    ]
   },
   {
